<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/businessiconss"
    android:hardwareAccelerated="true">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_admin_dashboard_activiy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_30"
        android:paddingTop="@dimen/dimen_30"
        tools:context="com.crmmarketing.hmt.HomeActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    android:id="@+id/fragment_me_dashboard_cvInquiry"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/dimen_05"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/dark_purple22">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/conversation"
                        android:padding="@dimen/dimen_05"
                        android:text="Inquiry"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCounterTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:background="@drawable/msg"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />


                </android.support.v7.widget.CardView>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_weight="1">

                <android.support.v7.widget.CardView
                    android:id="@+id/fragment_me_dashboard_cvFinalLead"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/dimen_05"
                    android:layout_marginStart="@dimen/dimen_05"
                    android:layout_marginTop="@dimen/dimen_10"
                    android:clickable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/dark_green">

                    <TextView
                        android:gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableTop="@drawable/conversation"
                        android:padding="@dimen/dimen_05"
                        android:text="@string/today_s_nfollowup"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvCounterToday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top|end"
                        android:background="@drawable/msg"
                        android:gravity="center"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />

                </android.support.v7.widget.CardView>


            </RelativeLayout>
            <android.support.v7.widget.CardView
                android:id="@+id/fragment_me_dashboard_cvPerformanceAnalysis"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_purple"
                app:cardPreventCornerOverlap="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/linechart"
                    android:gravity="center"
                    android:padding="@dimen/dimen_05"
                    android:text="@string/today_s_ncompleted_nfollowup"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCounterCompleted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:background="@drawable/msg"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />


            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:orientation="horizontal"
            android:weightSum="3">


            <android.support.v7.widget.CardView
                android:id="@+id/fragment_me_dashboard_cvViewTarget"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_brown">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:padding="@dimen/dimen_05"
                    android:text="View Target"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:id="@+id/fragment_me_dashboard_cvAttendance"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_purple22">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/conversation"
                    android:padding="@dimen/dimen_05"
                    android:text="Attendance"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:id="@+id/fragment_me_dashboard_cvCheckList"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_green">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/conversation"
                    android:padding="@dimen/dimen_05"
                    android:text="CheckList"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:orientation="horizontal"
            android:weightSum="3">
            <android.support.v7.widget.CardView
                android:id="@+id/fragment_tl_dashboard_cvExpence"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_red">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:padding="@dimen/dimen_05"
                    android:text="Expense"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/fragment_tl_dashboard_cvEventAttendance"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_green">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:padding="@dimen/dimen_05"
                    android:text="Event"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/fragment_me_dashboard_cvVolume"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:visibility="gone"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_red">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:gravity="center"
                    android:padding="@dimen/dimen_05"
                    android:text="@string/volume_ndata"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:visibility="visible"
                android:id="@+id/fragment_admin_dashboard_cvRequestLeave"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_red">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:gravity="center"
                    android:padding="@dimen/dimen_05"
                    android:text="@string/request_nleave"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dimen_10"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:orientation="horizontal"
            android:weightSum="3">
            <android.support.v7.widget.CardView
                android:id="@+id/fragment_tl_dashboard_cvClient"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/darkGreen">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:padding="@dimen/dimen_05"
                    android:text="Client"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/fragment_admin_dashboard_cvVolume"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_red">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:gravity="center"
                    android:padding="@dimen/dimen_05"
                    android:text="@string/volume_ndata"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/fragment_admin_dashboard_cvEventReport"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginEnd="@dimen/dimen_05"
                android:layout_marginStart="@dimen/dimen_05"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/dark_green">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/presentation"
                    android:padding="@dimen/dimen_05"
                    android:text="Event Report"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>



        </LinearLayout>



    </LinearLayout>

</ScrollView>

